# stdin_or_clipboard

./: Cargo.toml  README.md
examples/: async.rs  sync.rs  usage.rs
src/: error.rs  get_text.rs  lib.rs
src/sync/: get_text.rs  mod.rs
